   and Vincent Laviron)

- #12446: remove the hooks machinery around channel locking in runtimee/io.c
  (Gabriel Scherer, review by Xavier Leroy)

### Build system:

- #12198, #12321: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #11931: Fix tricky typing bug with type substitutions
  (Stephen Dolan, review by Leo White and Jacques Garrigue)

- #12037: get_extern_state potential NULL dereference.
  (Alexander Skvortsov, report by Török Edwin,
   design by Gabriel Scherer, Xavier Leroy)

- #12032, #12059: Bug fixes related to compilation of recursive definitions
  (Vincent Laviron, report by Victoire Noizet, review by Gabriel Scherer)

* #12145: Loopy constraints cause ocamlc to loop.
  Fixed by completely removing the call to `update_type` in
  `Typedecl.transl_type_decl`, as the expansion is already checked by
  `check_regularity`. As a result, recursion is more polymorphic,
  which may cause some (essentially wrong) type declarations to have
  unbound type variables, and some constraints unrelated to the concrete
  type to be ignored (see tests/typing-misc/constraints.ml).
  (Jacques Garrigue, report by Richard Eisenberg, review by Leo White)

- #12207, #12222: Make closure computation linear in the number of recursive
  functions instead of quadratic
  (Vincent Laviron, report by François Pottier, review by Nathanaëlle Courant
  and Gabriel Scherer)

- #12334, #12368: Bad error message with mutually recursive abbreviations
  (Jacques Garrigue, report by Richard Eisenberg, review by Gabriel Scherer
   and Richard Eisenberg)

- #12401: `seek_in` and `seek_out` sometimes returned normally when given
  negative offsets, instead of failing. Now both functions should consistently
  raise `Sys_error` in this case.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #12267: Fix stack alignment computation