@@ -938,11 +938,13 @@ type popen_process =
   | Process_full of in_channel * out_channel * in_channel
 
 let popen_processes = (Hashtbl.create 7 : (popen_process, int) Hashtbl.t)
+let popen_mutex = Mutex.create ()
 
 let open_proc prog args envopt proc input output error =
   let pid =
     create_process_gen prog args envopt input output error in
-  Hashtbl.add popen_processes proc pid
+  Mutex.protect popen_mutex (fun () ->
+    Hashtbl.add popen_processes proc pid)
 
 let open_process_args_in prog args =
   let (in_read, in_write) = pipe ~cloexec:true () in
@@ -1032,12 +1034,16 @@ let open_process_full cmd =
 
 let find_proc_id fun_name proc =
   try
-    Hashtbl.find popen_processes proc
+    Mutex.protect popen_mutex (fun () ->
+      Hashtbl.find popen_processes proc
+    )
   with Not_found ->
     raise(Unix_error(EBADF, fun_name, ""))
 
 let remove_proc_id proc =
-  Hashtbl.remove popen_processes proc
+  Mutex.protect popen_mutex (fun () ->
+    Hashtbl.remove popen_processes proc
+  )
 
 let process_in_pid inchan =
   find_proc_id "process_in_pid" (Process_in inchan)
